opt/manifests/codeflare/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-service
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/part-of: codeflare
    app.kubernetes.io/name: codeflare-operator
