opt/manifests/codeflare/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-workload-codeflare-dev-v1beta2-appwrapper
  failurePolicy: Fail
  name: mappwrapper.kb.io
  rules:
  - apiGroups:
    - workload.codeflare.dev
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    resources:
    - appwrappers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ray-io-v1-raycluster
  failurePolicy: Fail
  name: mraycluster.ray.openshift.ai
  rules:
  - apiGroups:
    - ray.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - rayclusters
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-workload-codeflare-dev-v1beta2-appwrapper
  failurePolicy: Fail
  name: vappwrapper.kb.io
  rules:
  - apiGroups:
    - workload.codeflare.dev
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - appwrappers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-ray-io-v1-raycluster
  failurePolicy: Fail
  name: vraycluster.ray.openshift.ai
  rules:
  - apiGroups:
    - ray.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - rayclusters
  sideEffects: None
